# Indium-bot

./: .gitignore  Procfile  README.md  __main__.py  better_bot.py  bot.py  config.py  example.env  main.py  pyproject.toml  requirements.txt  utils.py
Config/: config.py
Utils/: help_command.py
Utils/core/: better_bot.py
Utils/helpers/: helper.py
cogs/: code.py  emoji.py  error.py  fun.py  guild.py  misc.py  miscellaneous.py  moderation.py  snipe.py  utils.py
data/: gifs.json
discord_bot/: main.py
discord_bot/Utils/core/: better_bot.py
discord_bot/Utils/data/: gifs.json
discord_bot/Utils/helpers/: helper.py
discord_bot/cogs/: emoji.py  error.py  fun.py  guild.py  misc.py  moderation.py  snipe.py  utils.py
